# dwh

./: .gitignore  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
airflow/config/: airflow.cfg
airflow/dags/SYS/: DBT_COMPILE.py  DBT_RUN.py
airflow/plugins/operators/: MOEXToClickhouseOperator.py
airflow/plugins/sensors/: TelegramEventSensor.py
compose/airflow/: Dockerfile  docker-compose.yml
compose/clickhouse/: docker-compose.yml
compose/dbt/: Dockerfile  docker-compose.yml
compose/dbt/config/: profiles.yml
compose/minio/: docker-compose.yml
compose/ollama/: Dockerfile  docker-compose.yml
compose/postgres/: Dockerfile  docker-compose.yml
compose/postgres/init/: init_pg_airflow.sql  init_pg_core.sql  init_pg_metastore.sql
compose/redis/: docker-compose.yml
compose/redpanda/: docker-compose.yml
compose/redpanda/config/: connect.yaml  connect.yml  redpanda-console-config.yml  resources.yml
compose/trino/: Dockerfile  docker-compose.yml
compose/trino/config_metastore/: core-site.xml  hive-default.xml.template
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: check_full_refresh.sql  check_required_columns.sql  gen_hash_alias.sql  gen_hash_stm.sql  get_batch_list.sql  get_column_type.sql  get_max_value.sql  get_min_value.sql  get_param.sql  set_param.sql
dbt/macros/materializations/: append.sql  dummy.sql  insert.sql  insert_pg.sql  merge.sql  refresh.sql  replace.sql  replace_partition_ch.sql  (+2 more)
dbt/models/: schema.yml
migrations/pg/: 002_core_create_functions.sql  003_core_create_table_params.sql
(+16 files in other folders)
